grammar.js
    program: $ => repeat(
      // TODO: other kinds of definitions
      choice(
        seq(
          $.keyword_with,
          $.cte,
          repeat(
            seq(
              ',',
              $.cte,
            ),
          ),
          $.statement,
        ),
        $.statement,
      )
    ),

    keyword_select: _ => make_keyword("select"),
    keyword_delete: _ => make_keyword("delete"),
    keyword_insert: _ => make_keyword("insert"),
    keyword_replace: _ => make_keyword("replace"),
    keyword_into: _ => make_keyword("into"),
    keyword_values: _ => make_keyword("values"),
    keyword_from: _ => make_keyword("from"),
    keyword_where: _ => make_keyword("where"),
    keyword_order_by: _ => make_keyword("order by"),
    keyword_desc: _ => make_keyword("desc"),
    keyword_limit: _ => make_keyword("limit"),
    keyword_drop: _ => make_keyword("drop"),
    keyword_table: _ => make_keyword("table"),
    keyword_view: _ => make_keyword("view"),
    keyword_type: _ => make_keyword("type"),
    keyword_as: _ => make_keyword("as"),
    keyword_if: _ => make_keyword("if"),
    keyword_exists: _ => make_keyword("exists"),
    keyword_cascade: _ => make_keyword("cascade"),
    keyword_with: _ => make_keyword("with"),
    keyword_returning: _ => make_keyword("returning"),
    _not_null: $ => seq($.keyword_not, $.keyword_null),
    _if_exists: $ => seq($.keyword_if, $.keyword_exists),
    direction: $ => choice($.keyword_desc, $.keyword_asc),

    // Types
    type: $ => choice(
      alias($._builtin_type, $.builtin),
      alias($._identifier, $.custom),
    ),

    _builtin_type: $ => choice(
      $._keyword_boolean,

      $._keyword_smallserial,
      $._keyword_serial,
      $._keyword_bigserial,
      $._keyword_smallint,
      $._keyword_int,

      $._bigint,
      $._decimal,
      $._numeric,
      $._keyword_real,
      $._double,

      $._keyword_money,

      $._char,
      $._varchar,
      $._keyword_text,

      $._keyword_uuid,

      $._keyword_json,
      $._keyword_jsonb,
      $._keyword_xml,

      $._keyword_bytea,

      $._keyword_date,
      $._keyword_datetime,
      $._keyword_timestamp,
      $._keyword_timestamptz,

      $._keyword_geometry,
      $._keyword_geography,
      $._keyword_box2d,
      $._keyword_box3d,

      $._bigint,
      $._char,
      $._varchar,
      $._decimal,
      $._numeric,
    ),

    comment: _ => /--.*\n/,
    marginalia: _ => /\/'*.*\*\//,

    cte: $ => seq(
      $.identifier,
      $.keyword_as,
      '(',
      alias(
        choice(
          $._select_statement,
          $._delete_statement,
          $._insert_statement,
          $._update_statement,
        ),
        $.statement,
      ),
      ')',
    ),

    statement: $ => seq(
      choice(
        $._select_statement,
        $._delete_statement,
        $._create_statement,
        $._alter_statement,
        $._drop_statement,
        $._insert_statement,
        $._update_statement,
      ),
      ';',
    ),

    _select_statement: $ => seq(
      $.select,
      optional($.from),
      repeat(
        seq(
          choice(
            seq(
              $.keyword_union,
              optional($.keyword_all),
            ),
            $.keyword_except,
            $.keyword_intersect,
          ),
          $.select,
          optional($.from),
        ),
      ),
    ),

    select: $ => seq(
      $.keyword_select,
      choice(
        seq(
          optional($.keyword_distinct),
          $.select_expression,
        ),
        seq(
          $.keyword_distinct,
          '(',
          $.select_expression,
          ')',
        ),
      ),
    ),

    select_expression: $ => choice(
      seq(
        $._field,
        optional($._alias),
        repeat(
          seq(
            ',',
            $._field,
            optional($._alias),
          ),
        ),
      ),
    ),

    _delete_statement: $ => seq(
      $.delete,
      alias($._delete_from, $.from),
      optional($.returning),
    ),

    delete: $ => seq(
      $.keyword_delete,
      optional($.index_hint),
    ),

    _create_statement: $ => seq(
      choice(
        $.create_table,
        $.create_view,
        $.create_materialized_view,
        $.create_function,
        $.create_type,
        // TODO type, sequence
      ),
    ),

    _alter_statement: $ => seq(
      choice(
        $.alter_table,
        $.alter_view,
      ),
    ),

    _drop_statement: $ => seq(
      choice(
        $.drop_table,
        $.drop_view,
      ),
    ),

    drop_table: $ => seq(
      $.keyword_drop,
      $.keyword_table,
      optional($._if_exists),
      $.table_reference,
      optional(
        $.keyword_cascade,
      ),
    ),

    drop_view: $ => seq(
      $.keyword_drop,
      $.keyword_view,
      optional($._if_exists),
      $.table_reference,
      optional(
        $.keyword_cascade,
      ),
    ),

    table_reference: $ => $._reference,

    _reference: $ => seq(
      optional(
        seq(
          field('schema', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
    ),

    _insert_statement: $ => seq(
      $.insert,
      optional($.returning),
    ),

    insert: $ => seq(
      choice($.keyword_insert, $.keyword_replace),
      $.keyword_into,
      $.insert_expression,
    ),

    insert_expression: $ => seq(
      $.table_reference,
      optional(alias($._column_list_without_order, $.column_list)),
      choice(
        seq(
          $.keyword_values,
          $.list,
        ),
        $._select_statement,
      ),
    ),

    _column_list_without_order: $ => param_list(alias($._column_without_order, $.column)),
    _update_statement: $ => seq(
      $.update,
      optional($.returning),
    ),

    column_list: $ => param_list($.column),

    column: $ => seq(
      field('name', $.identifier),
      optional($.direction),
    ),

    _field: $ => seq(
      choice(
        $._expression,
        $.all_fields,
      ),
    ),

    all_fields: $ => seq(
      optional(
        seq(
          optional(
            seq(
              field('schema', $.identifier),
              '.',
            ),
          ),
          field('table_alias', $.identifier),
          '.',
        ),
      ),
      '*',
    ),

    field: $ => seq(
      optional(
        seq(
          optional(
            seq(
              field('schema', $.identifier),
              '.',
            ),
          ),
          field('table_alias', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
    ),

    _alias: $ => choice(
      field('alias', $.identifier),
      seq(
        $.keyword_as,
        field('alias', $.identifier),
      ),
    ),

    from: $ => seq(
      $.keyword_from,
      $.table_expression,
      optional($.index_hint),
      repeat(
        choice(
          $.join,
          $.lateral_join,
        ),
      ),
      optional($.where),
      optional($.group_by),
      optional($.order_by),
      optional($.limit),
    ),

    table_expression: $ => seq(
      optional(
        seq(
          field('schema', $.identifier),
          '.',
        ),
      ),
      field('name', $.identifier),
      optional(
        seq(
          optional($.keyword_as),
          field('table_alias', $.identifier),
        ),
      ),
    ),

    where: $ => seq(
      $.keyword_where,
      $.where_expression,
    ),

    order_by: $ => seq(
      $.keyword_order_by,
      $.order_expression,
    ),

    order_expression: $ => seq(
      $._field,
      optional($.direction),
      repeat(
        seq(
          ',',
          $._field,
          optional($.direction),
        ),
      ),
    ),

    limit: $ => seq(
      $.keyword_limit,
      $._literal,
      optional($.offset),
    ),

    returning: $ => seq(
      $.keyword_returning,
      seq(
        $._field,
        optional($._alias),
        repeat(
          seq(
            ',',
            $._field,
            optional($._alias),
          ),
        ),
      ),
    ),

    where_expression: $ => seq(
      $._expression,
    ),

    predicate: $ => choice(
      ...[
        ['+', 'binary_plus'],
        ['-', 'binary_plus'],
        ['*', 'binary_times'],
        ['/', 'binary_times'],
        ['%', 'binary_times'],
        ['^', 'binary_exp'],
        ['=', 'binary_relation'],
        ['<', 'binary_relation'],
        ['<=', 'binary_relation'],
        ['!=', 'binary_relation'],
        ['>=', 'binary_relation'],
        ['>', 'binary_relation'],
        [seq($.keyword_is, $.keyword_distinct, $.keyword_from), 'binary_relation'],
        [seq($.keyword_is, $.keyword_not, $.keyword_distinct, $.keyword_from), 'binary_relation'],
        [$.keyword_and, 'clause_connective'],
        [$.keyword_or, 'clause_connective'],
      ].map(([operator, precedence]) =>
        prec.left(precedence, seq(
          field('left', $._expression),
          field('operator', operator),
          field('right', $._expression)
        ))
      ),
      prec.left('binary_in', seq(
        field('left', $._expression),
        field('operator', $.keyword_in),
        field('right', $.list)
      )),
      seq(
        $._expression,
        $.keyword_is,
        choice(
          $.keyword_null,
          $._not_null,
          $.keyword_true,
          $.keyword_false,
        ),
      ),
      // TODO exists/not exists (subquery)
    ),

    _expression: $ => choice(
      $._literal,
      $.field,
      $.predicate,
      $.subquery,
      $.function_call,
      $.keyword_true,
      $.keyword_false,
      $.keyword_null,
      $.case,
    ),

    list: $ => param_list($._literal),

    _literal: $ => prec(2,
      choice(
        $.number,
        $.string,
        $.keyword_true,
        $.keyword_false,
        $.keyword_null,
      ),
    ),

    string: $ => choice(
      $._single_quote_literal_string,
      $._double_quote_literal_string,
    ),

    _single_quote_literal_string: $ => seq(
      "'",
      repeat(choice(
        alias($.unescaped_single_string_fragment, $.string_fragment),
        $.escape_sequence
      )),
      "'"
    ),

    _double_quote_literal_string: $ => seq(
      '"',
      repeat(choice(
        alias($.unescaped_double_string_fragment, $.string_fragment),
        $.escape_sequence
      )),
      '"'    
    ),

    // Workaround to https://github.com/tree-sitter/tree-sitter/issues/1156
    // We give names to the token() constructs containing a regexp
    // so as to obtain a node in the CST.
    //
    number: _ => /\d+/,

    identifier: $ => choice(
      $._identifier,
      seq('`', $._identifier, '`'),
      seq('"', $._identifier, '"'),
    ),
    _identifier: _ => /([a-zA-Z_][0-9a-zA-Z_]*)/,
  }

});

function parametric_type($, type, params = ['size']) {
  return choice(
    type,
    seq(
      type,
      '(',
      // first parameter is guaranteed, shift it out of the array
      field(params.shift(), $.number),
      // then, fill in the ", next" until done
      ...params.map(p => seq(',', field(p, $.number))),
      ')',
    ),
  )
}

function param_list(field) {
  return seq(
    '(',
    field,
    repeat(
      seq(',', field)
    ),
    ')',
  )
}

function make_keyword(word) {
  return new RegExp(word + "|" + word.toUpperCase());
}
