test/corpus/comment.txt
==================
Can parse comments
==================

-- hello
SELECT 1;

---

(program
 (comment)
 (statement
  (select
   (keyword_select)
   (select_expression
    (number)))))

==================
Can parse comments anywhere...
==================

-- hello
SELECT 1; --hi
--hi

---

(program
 (comment)
 (statement
  (select
   (keyword_select)
   (select_expression
    (number))))
 (comment)
 (comment))

==================
...including between statements
==================

-- hello
SELECT 1; --hi
-- hi again
SELECT 2;

---

(program
 (comment)
 (statement
  (select
   (keyword_select)
   (select_expression
    (number))))
 (comment)
 (comment)
 (statement
  (select
   (keyword_select)
   (select_expression
    (number)))))

==================
Simple marginalia
==================

/* application=super-app */
SELECT id /* MAX_EXECUTION_TIME(500) */
FROM my_table;

---

(program
 (marginalia)
 (statement
  (select
   (keyword_select)
   (select_expression
    (field
     name: (identifier))))
  (marginalia)
  (from
   (keyword_from)
   (table_expression
    name: (identifier)))))

==================
Can parse delete with marginalia
==================

DELETE /* MAX_EXECUTION_TIME(500) */
FROM my_table;

---

(program
 (statement
  (delete
   (keyword_delete))
  (marginalia)
  (from
   (keyword_from)
   (table_expression
    name: (identifier)))))
