test/corpus/drop.txt
==================
Drop table
==================

DROP TABLE my_table;

---

(program
 (statement
  (drop_table
   (keyword_drop)
   (keyword_table)
   (table_reference name: (identifier))
  )))

==================
Drop table and cascade through
==================

DROP TABLE my_table CASCADE;

---

(program
 (statement
  (drop_table
   (keyword_drop)
   (keyword_table)
   (table_reference name: (identifier))
   (keyword_cascade)
  )))

==================
Drop view
==================

DROP VIEW my_view;

---

(program
 (statement
  (drop_view
   (keyword_drop)
   (keyword_view)
   (table_reference name: (identifier))
  )))

==================
Drop type
==================

DROP TYPE if exists a, b restrict;

---

(program
  (statement
    (drop_type
      (keyword_drop)
      (keyword_type)
      (keyword_if)
      (keyword_exists)
      (type
        (custom))
      (type
        (custom))
      (keyword_restrict))))
